# palworld-save-tools

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  convert-single-json-to-sav.py  convert-single-sav-to-json.py  convert.py  hatch.toml  init_player_points.py  palworld-cleanup-tools.py  pyproject.toml  remove_all_pal_beacon.py  requirements-dev.txt  resave_test.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: package.yaml  premerge.yaml  publish.yaml
convenience_tools/: convert-single-json-to-sav.bat  convert-single-json-to-sav.cmd  convert-single-sav-to-json.bat  convert-single-sav-to-json.cmd  convert.cmd
lib/: archive.py  gvas.py  json_tools.py  noindent.py  palsav.py  paltypes.py  rawdata.py  reader.py  tests.py  writer.py
lib/rawdata/: base_camp.py  base_camp_module.py  build_process.py  character.py  character_container.py  connector.py  debug.py  dynamic_item.py  foliage_model.py  foliage_model_instance.py  group.py  item_container.py  item_container_slots.py  map_concrete_model.py  map_model.py  work.py  work_collection.py  worker_director.py
lib/sav_types/: BaseCampSaveDataType.py  CharacterSaveParameterMap.py  type.py  utilType.py
lib/utils/: charactersave_util.py
palworld_save_tools/: archive.py  dictsav.py  gvas.py  json_tools.py  palsav.py  paltypes.py
palworld_save_tools/commands/: convert.py  resave_test.py
palworld_save_tools/rawdata/: base_camp.py  base_camp_module.py  build_process.py  character.py  character_container.py  common.py  connector.py  debug.py  dynamic_item.py  foliage_model.py  foliage_model_instance.py  group.py  item_container.py  item_container_slots.py  map_concrete_model.py  map_concrete_model_module.py  map_model.py  map_object.py  work.py  work_collection.py  worker_director.py
palworld_save_tools/scripts/: resave_test.py
scripts/: extract_map_object_concrete_classes.py
tests/: gvas.py  rawdata.py  test_archive.py  test_cli_scripts.py  test_gvas.py  test_rawdata.py  tests.py
tests/testdata/: Level.sav  LevelMeta.sav  LocalData.sav  WorldOption.sav
tests/testdata/larger-saves/: LocalData.sav
tests/testdata/unicode-saves/: Level.sav  LevelMeta.sav  LocalData.sav  WorldOption.sav
