[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "palworld-save-tools"
authors = [{ name = "Jun Siang Cheah", email = "me@jscheah.me" }]
description = "Tools for converting Palworld .sav files to JSON and back"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/cheahjs/palworld-save-tools"
Issues = "https://github.com/cheahjs/palworld-save-tools/issues"

[project.scripts]
palworld-save-tools = "palworld_save_tools.commands.convert:main"

[project.optional-dependencies]
# These are dependencies only for tests
# Default usage of the library must not rely on any external dependencies!
tests = [
  "parameterized==0.9.0",
  "mypy==1.8.0"
]
# Additional dependencies to provide more performant implementations
performance = ["recordclass"]

[[tool.mypy.overrides]]
module = ["recordclass", "parameterized"]
ignore_missing_imports = true
